@@ -1,6 +1,8 @@
 2.2.1 dev
 - Added a configuration for the backtrace, to limit the analysed
   steps.
+- Bugfix: Prevent the debug methods from creating new analysis
+  calls, resulting in an infinite loop.
 - Bugfix: Better cleanup of HTML fragments left open from
   the hosting CMS.
 - Bugfix: Reverted the 'Output -> File' change from 2.2.0
